2013-08-14 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Improve footer layout.

	MERGED FROM branch_4.0

2013-08-13  Ramon Novoa  <rnovoa@artica.es>

	* include/help/es/help_snmp_alert_custom.php,
	  include/help/en/help_snmp_alert_custom.php: Updated. The Japanese
	  help file seems to be ok.

2013-08-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php: change the text input for
	description, now it is a textarea for large descriptions.

2013-08-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php: fixed the PHP warnings for
	empty objects.

2013-08-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php: fixed the link to edit in the
	button to edit, and fixed the free text filter.

2013-08-08 Koichiro Kikuchi <koichiro@rworks.jp>

	* index.php: Fixed footer layout probrems: Now we can see the
	 footer at the browser bottom when reducing the browser height.
	 Also fixes the footer overlay probrem in some pages (e.g.
	 "Modules in policy" page).

2013-08-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/zoom_default.svg: tiny fixes make for Carla.

2013-08-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* images/zoom_default.svg: added a beatiful buttom for default zoom
	from Carla job.

2013-08-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php, include/functions_alerts.php,
	operation/agentes/alerts_status.php: improved the function
	"get_group_alerts" to use in the places that there were a foreach
	loop with all agents for any group.
	
	Fixes: #2060

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	godmode/agentes/module_manager_editor.php: changed the code to
	avoid to call enterprise functions.
	
	Fixes: #2367
	
	*include/functions_agents.php: fixed source code style..

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the call to